--- a/ArtGallery/Views/Account/Login.cshtml
+++ b/ArtGallery/Views/Account/Login.cshtml
@@ -25,10 +25,11 @@
 
     <!-- Custom styles for this template-->
     <link href="~/Admin/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="~/Admin/css/custom.css" rel="stylesheet">
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-custom-primary">
 
     <div class="container">
 
@@ -59,11 +60,11 @@
                                             <input type="password" class="form-control form-control-user"
                                                    id="exampleInputPassword" placeholder="Password" name="password">
                                         </div>
-                                        <button class="btn btn-primary btn-user btn-block" type="submit">Login</button>
+                                        <button class="btn btn-custom-primary btn-user btn-block" type="submit">Login</button>
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" asp-action="Register">Create an Account!</a>
+                                        <a class="small text-custom-primary" asp-action="Register">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
