--- a/ArtGallery/Views/Shared/_UserLayout.cshtml
+++ b/ArtGallery/Views/Shared/_UserLayout.cshtml
@@ -74,15 +74,6 @@
                         <a asp-controller="Home" asp-action="Index" class="nav-item nav-link active">Home</a>
                         <a asp-controller="Artwork" asp-action="Index" class="nav-item nav-link">Artworks</a>
                         <a asp-controller="Auction" asp-action="Index" class="nav-item nav-link">Auction</a>
-                        @* <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                <a asp-controller="Cart" asp-action="Index" class="dropdown-item">Cart</a>
-                                <a asp-controller="Auction" asp-action="Index" class="dropdown-item">Auction</a>
-                                <a asp-controller="UI" asp-action="Testimonial" class="dropdown-item">Testimonial</a>
-                                <a asp-controller="UI" asp-action="Page404" class="dropdown-item">404 Page</a>
-                            </div>
-                        </div> *@
                         <a asp-controller="Exhibition" asp-action="Index" class="nav-item nav-link">Exhibition</a>
                     </div>
                     <div class="d-flex m-3 me-0">
@@ -212,9 +203,6 @@
                     <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
                 </div>
                 <div class="col-md-6 my-auto text-center text-md-end text-white">
-                    <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                    <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                    <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
                     Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
                 </div>
             </div>
@@ -222,19 +210,19 @@
     </div>
     <!-- Copyright End -->
     <!-- Back to Top -->
-    @* <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a> *@
-
 
     <!-- JavaScript Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/UI/lib/easing/easing.min.js"></script>
     <script src="~/UI/lib/waypoints/waypoints.min.js"></script>
     <script src="~/UI/lib/lightbox/js/lightbox.min.js"></script>
     <script src="~/UI/lib/owlcarousel/owl.carousel.min.js"></script>
-    @RenderSection("Scripts", required: false)
     <!-- Template Javascript -->
     <script src="~/UI/js/main.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 
 </html>
