--- a/ArtGallery/wwwroot/Admin/css/sb-admin-2.css
+++ b/ArtGallery/wwwroot/Admin/css/sb-admin-2.css
@@ -2356,9 +2356,9 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+    color: #fff;
+    background-color: #81c408;
+    border-color: #81c408;
 }
 
 .btn-primary:hover {
@@ -6411,8 +6411,11 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #4e73df !important;
+    background-color: #81c408 !important
 }
+/*.bg-primary {
+  background-color: #4e73df !important;
+}*/
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -9590,10 +9593,13 @@ button.bg-dark:focus {
 .text-white {
   color: #fff !important;
 }
-
+.text-primary {
+    color: #81c408 !important
+}
+/*
 .text-primary {
   color: #4e73df !important;
-}
+}*/
 
 a.text-primary:hover, a.text-primary:focus {
   color: #224abe !important;
