--- a/ArtGallery/Views/Shared/_Layout.cshtml
+++ b/ArtGallery/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" asp-controller="Artist" asp-action="Index">
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                    <i class="bi bi-image"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3">Art Gallery</div>
             </a>
