--- a/ArtGallery/Views/Account/Register.cshtml
+++ b/ArtGallery/Views/Account/Register.cshtml
@@ -5,6 +5,7 @@
     ViewData["title"] = "Register";
     Layout = null;
 }
+@model Register;
 <!DOCTYPE html>
 <html lang="en">
 
@@ -36,8 +37,8 @@
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
                 <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image">
-                        <img src="/Img/Online gallery-amico.png" alt="Alternate Text" class="img-thumbnail" />
+                    <div class="col-lg-5 d-none d-flex align-items-center bg-register-image">
+                        <img src="/Img/Online gallery-amico.png" alt="Alternate Text" class="img-fluid" />
                     </div>
                     <div class="col-lg-7">
                         <div class="p-5">
@@ -45,23 +46,63 @@
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                             </div>
                             <form method="post" class="user">
-                                <div class="form-group">
-                                    <input type="text" class="form-control form-control-user" id="exampleUserName"
-                                            placeholder="User name" name="username">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control form-control-user"
-                                            id="exampleInputPassword" placeholder="Password" name="password">
-                                </div>
                                 <div class="form-group row">
+                                    <div class="form-check col-sm-4 mb-3 mb-sm-0">
+                                        <input type="radio" id="customer" asp-for="Role" value="customer" checked/>
+                                        <label for="customer">Customer</label><br />
+                                    </div>
                                     <div class="form-check col-sm-4 mb-3 mb-sm-0 ml-3">
-                                        <input checked class="form-check-input" type="radio" name="role" id="inlineRadio1" value="Customer">
-                                        <label class="form-check-label" for="inlineRadio1">Customer</label>
+                                        <input type="radio" id="artist" asp-for="Role" value="artist" />
+                                        <label for="artist">Artist</label>
                                     </div>
-                                    <div class="form-check col-sm-4">
-                                        <input class="form-check-input" type="radio" name="role" id="inlineRadio2" value="Artist">
-                                        <label class="form-check-label" for="inlineRadio2">Artist</label>
+                                </div>
+
+                                <div class="form-group row">
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <input type="text" class="form-control form-control-user"
+                                           placeholder="Enter username" asp-for="UserName">
                                     </div>
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <input type="password" class="form-control form-control-user"
+                                           placeholder="Enter password" asp-for="Password">
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <div class="col-sm-6 mb-3 mb-sm-0 for-artist">
+                                        <input type="text" class="form-control form-control-user"
+                                               placeholder="Enter full name" asp-for="ArtistName">
+                                    </div>
+                                    <div class="col-sm-6 mb-3 mb-sm-0 for-customer">
+                                        <input type="text" class="form-control form-control-user"
+                                               placeholder="Enter full name" asp-for="FullName">
+                                    </div>
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <input type="text" class="form-control form-control-user"
+                                               placeholder="Enter email" asp-for="Email">
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="text" class="form-control form-control-user"
+                                           placeholder="Enter phone number" asp-for="PhoneNumber">
+                                </div>
+
+                                <div class="form-group for-artist">
+                                    <input type="text" class="form-control form-control-user"
+                                            placeholder="Enter nationality" asp-for="Nationality">
+                                </div>
+                                <div class="form-group for-artist">
+                                    <input type="text" class="form-control form-control-user"
+                                            placeholder="Enter website" asp-for="Website">
+                                </div>
+                                <div class="form-group for-customer">
+                                    <input type="text" class="form-control form-control-user"
+                                           placeholder="Enter address" asp-for="Address">
+                                </div>
+                                <div class="form-group for-artist">
+                                    <input type="text" class="form-control form-control-user"
+                                           placeholder="Enter biography" asp-for="Biography">
                                 </div>
                                 
                                 <button class="btn btn-primary btn-user btn-block" type="submit">
@@ -80,6 +121,22 @@
 
     </div>
 
+    <script>
+        document.querySelectorAll('input[name="Role"]').forEach((elem) => {
+            elem.addEventListener("change", function (event) {
+                var userType = event.target.value;
+                document.querySelectorAll('.for-artist').forEach((element) => {
+                    element.style.display = userType === 'artist' ? 'block' : 'none';
+                });
+                document.querySelectorAll('.for-customer').forEach((element) => {
+                    element.style.display = userType === 'customer' ? 'block' : 'none';
+                });
+            });
+        });
+
+        // Trigger change event on page load to set the initial state
+        document.querySelector('input[name="Role"]:checked').dispatchEvent(new Event('change'));
+    </script>
     <!-- Bootstrap core JavaScript-->
     <script src="~/Admin/vendor/jquery/jquery.min.js"></script>
     <script src="~/Admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -89,7 +146,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="~/Admin/js/sb-admin-2.min.js"></script>
-
+    
 </body>
 
 </html>
