--- a/ArtGallery/Views/Account/Login.cshtml
+++ b/ArtGallery/Views/Account/Login.cshtml
@@ -42,8 +42,8 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image">
-                                <img src="/Img/Online gallery-amico.png" alt="Alternate Text" class="img-thumbnail" />
+                            <div class="col-lg-6 d-none d-flex align-items-center bg-login-image">
+                                <img src="/Img/Online gallery-amico.png" alt="Alternate Text" class="img-fluid" />
                             </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
