--- a/ArtGallery/Views/Cart/Index.cshtml
+++ b/ArtGallery/Views/Cart/Index.cshtml
@@ -47,5 +47,10 @@
             }
         </tbody>
     </table>
+    <div>
+        <form asp-controller="Cart" asp-action="Payment">
+            <button type="submit" class="btn btn-success">Purchase</button>
+        </form>
+    </div>
 </div>
 <!-- Cart Page End -->
