--- a/ArtGallery/Views/Artwork/Admin.cshtml
+++ b/ArtGallery/Views/Artwork/Admin.cshtml
@@ -14,8 +14,8 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>Title</th>
-            <th>Artist</th>
+            <th>Artwork Title</th>
+            <th>StartingPrice</th>
             <th>Description</th>
             <th>Category</th>
             <th>Status</th>
