--- a/ArtGallery/Views/Auction/Index.cshtml
+++ b/ArtGallery/Views/Auction/Index.cshtml
@@ -25,19 +25,27 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">@auction.ArtworkTitle</h5>
-                                <p class="card-text">Start Date: @auction.StartDate.ToString("d")</p>
-                                <p class="card-text">End Date: @auction.EndDate.ToString("d")</p>
+                                <h5 class="card-title">@auction.ArtworkTitle - @(auction.EndDate > DateTime.Now ? "In progress" : "Finished")</h5>
+                                <p class="card-text">Start Date: @auction.StartDate</p>
+                                <p class="card-text">End Date: @auction.EndDate</p>
                                 <p class="card-text">Starting Price: @auction.StartingPrice.ToString("C")</p>
-                                <p class="card-text">Current Bid: @auction.CurrentBid.ToString("C")</p>
-                                <form asp-action="PlaceBid" method="post">
-                                    <div class="form-group">
-                                        <label for="newBid">Your Bid</label>
-                                        <input type="number" name="NewBid" class="form-control" min="@auction.CurrentBid" step="0.01" required />
-                                    </div>
-                                    <input type="hidden" name="AuctionId" value="@auction.AuctionId" />
-                                    <button type="submit" class="btn btn-primary mt-2">Place Bid</button>
-                                </form>
+                                
+                                @if (auction.EndDate > DateTime.Now)
+                                {
+                                    <p class="card-text">Current Bid: @auction.CurrentBid.ToString("C") by <strong>@auction.UserName</strong></p>
+                                    <form asp-action="PlaceBid" method="post">
+                                        <div class="form-group">
+                                            <label for="newBid">Your Bid</label>
+                                            <input type="number" name="NewBid" class="form-control" min="@auction.CurrentBid" step="0.01" required />
+                                        </div>
+                                        <input type="hidden" name="AuctionId" value="@auction.AuctionId" />
+                                        <button type="submit" class="btn btn-primary mt-2">Place Bid</button>
+                                    </form>
+                                }
+                                @if (auction.EndDate <= DateTime.Now)
+                                {
+                                    <p class="card-text">Purchased by <strong>@auction.UserName</strong> at price @auction.CurrentBid.ToString("C")</p>
+                                }
 @*                                 <a href="@Url.Action("Edit", new { id = auction.AuctionId })" class="btn btn-warning mt-2">
                                     <i class="fas fa-edit"></i>
                                 </a>
