--- a/ArtGallery/Views/Artwork/Edit.cshtml
+++ b/ArtGallery/Views/Artwork/Edit.cshtml
@@ -39,8 +39,7 @@
     <div class="form-group">
         <label asp-for="Status" class="control-label"></label>
         <select asp-for="Status" class="form-control">
-            <option value="OnSale">OnSale</option>
-            <option value="Auction">Auction</option>
+            <option value="Available">Available</option>
             <option value="Sold">Sold</option>
         </select>
         <span asp-validation-for="Status" class="text-danger"></span>
