--- a/ArtGallery/Views/Account/Register.cshtml
+++ b/ArtGallery/Views/Account/Register.cshtml
@@ -26,10 +26,11 @@
 
     <!-- Custom styles for this template-->
     <link href="~/Admin/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="~/Admin/css/custom.css"rel="stylesheet">
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-custom-primary">
 
     <div class="container">
 
@@ -105,13 +106,13 @@
                                            placeholder="Enter biography" asp-for="Biography">
                                 </div>
                                 
-                                <button class="btn btn-primary btn-user btn-block" type="submit">
+                                <button class="btn btn-custom-primary btn-user btn-block" type="submit">
                                     Register Account
                                 </button>
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" asp-action="Login">Already have an account? Login!</a>
+                                <a class="small text-custom-primary" asp-action="Login">Already have an account? Login!</a>
                             </div>
                         </div>
                     </div>
