--- a/ArtGallery/Views/Artwork/Detail.cshtml
+++ b/ArtGallery/Views/Artwork/Detail.cshtml
@@ -34,12 +34,15 @@
         <dt class="col-sm-2">Price</dt>
         <dd class="col-sm-10">@Model.Price?.ToString("C")</dd>
         <dt class="col-sm-2"></dt>
+        @if(Model.Status == Status.Available)
+        {
         <dd class="col-sm-10">
             <form asp-controller="Cart" asp-action="AddToCart" method="post">
                 <input type="hidden" name="artworkId" value="@Model.ArtworkId" />
                 <button type="submit" class="btn btn-primary mt-2 w-auto">Add to Cart</button>
             </form>
-        </dd>
+        </dd>  
+        }
     }
 </dl>
 @* <div>
