--- a/ArtGallery/Views/Artwork/Edit.cshtml
+++ b/ArtGallery/Views/Artwork/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ArtGallery.Models.ArtworkEdit
 @{
     ViewData["Title"] = "Edit Artwork";
+    var exhibitions = ViewBag.Exhibition;
     var artists = ViewBag.Artist;
 }
 
@@ -53,6 +54,17 @@
             }
         </select>
         <span asp-validation-for="ArtistId" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="ExhibitionId" class="control-label"></label>
+        <select asp-for="ExhibitionId" class="form-control">
+            <option value="">-- Select Exhibition --</option>
+            @foreach (Exhibition exhibition in exhibitions)
+            {
+                <option value="@exhibition.ExhibitionId">@exhibition.ExhibitionName</option>
+            }
+        </select>
+        <span asp-validation-for="ExhibitionId" class="text-danger"></span>
     </div>
     <div class="form-group">
         <input type="submit" value="Save" class="btn btn-primary" />
