--- a/ArtGallery/Views/Artwork/Index.cshtml
+++ b/ArtGallery/Views/Artwork/Index.cshtml
@@ -53,6 +53,18 @@
                             </div>
                             <div class="col-lg-12">
                                 <div class="mb-3">
+                                    <h4>Statuses</h4>
+                                    @foreach (var status in Enum.GetValues(typeof(Status)).Cast<Status>())
+                                    {
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" name="statuses" value="@status" @(Context.Request.Query["statuses"].Contains(status.ToString()) ? "checked" : "")>
+                                            <label class="form-check-label">@status</label>
+                                        </div>
+                                    }
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="mb-3">
                                     <h4 class="mb-2">Price</h4>
                                     <h6 class="mb-2">Min</h6>
                                     <input type="range" class="form-range w-100" id="minPrice" name="minPrice" min="0" max="10000" value=@minPrice oninput="amountMin.value=minPrice.value">
