--- a/ArtGallery/Views/Auction/Admin.cshtml
+++ b/ArtGallery/Views/Auction/Admin.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
 }
 
-<h2>Artworks</h2>
+<h2>Auction List</h2>
 
 <p>
     <a href="@Url.Action("Create")" class="btn btn-primary">Create New</a>
