--- a/ArtGallery/Views/Exhibition/Detail.cshtml
+++ b/ArtGallery/Views/Exhibition/Detail.cshtml
@@ -21,52 +21,62 @@
     <p><strong>Start Date:</strong> @Model.StartDate.ToString("g")</p>
     <p><strong>End Date:</strong> @Model.EndDate.ToString("g")</p>
     <p>@Model.Description</p>
-    <img src="@Model.ImageUrl" class="img-fluid" alt="@Model.ExhibitionName">
+    <div class="image-container">
+        <img src="@Model.ImageUrl" class="img-fluid image-custom" alt="@Model.ExhibitionName">
+    </div>
 </div>
-@* <div>
-    <h4>Exhibition</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ExhibitionName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ExhibitionName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Venue)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Venue)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-    </dl>
+
+<div class="container banner-container">
+    <h2 class="banner-title">Artworks in the Exhibition</h2>
+    <div class="owl-carousel owl-theme">
+        @foreach (var image in Model.ArtworkImages)
+        {
+            <div><img src="@image" alt=""></div>
+        }
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.ExhibitionId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
- *@
+
+
+<style>
+    .owl-carousel .item img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .image-custom {
+        max-width: 100%;
+        height: 300px; 
+    }
+
+    .image-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+    .banner-container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px;
+        text-align: center;
+    }
+
+    .banner-title {
+        font-size: 2rem;
+        margin-bottom: 20px;
+    }
+
+    .owl-carousel .item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 400px;
+    }
+
+        .owl-carousel .item img {
+            max-height: 100%;
+            max-width: 100%;
+            object-fit: contain;
+        }
+</style>
