--- a/ArtGallery/Views/Shared/_UserLayout.cshtml
+++ b/ArtGallery/Views/Shared/_UserLayout.cshtml
@@ -1,7 +1,9 @@
-﻿
+﻿@using System.Security.Claims;
+
 @inject ArtGallery.Services.CartService _cartService
 @{
     ViewData["Title"] = "_UserLayout";
+    var role = User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Role)?.Value;
     var accountId = User.Claims.FirstOrDefault(c => c.Type == "AccountId")?.Value;
     var cartItemCount = 0;
     if (accountId != null)
@@ -19,6 +21,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <!-- Owl-Carousel -->
+    <link href="~/OwlCarousel/css/Owl.Carousel.min.css" rel="stylesheet">
+    <link href="~/OwlCarousel/css/Owl.Theme.Default.min.css" rel="stylesheet">
+    <link href="~/OwlCarousel/css/Style.css" rel="stylesheet">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +38,6 @@
     <!-- Libraries Stylesheet -->
     <link href="~/UI/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link href="~/UI/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="~/UI/css/bootstrap.min.css" rel="stylesheet">
@@ -156,6 +161,7 @@
     <!-- Back to Top -->
 
     <!-- JavaScript Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
@@ -167,6 +173,8 @@
     <script src="~/UI/lib/waypoints/waypoints.min.js"></script>
     <script src="~/UI/lib/lightbox/js/lightbox.min.js"></script>
     <script src="~/UI/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="~/OwlCarousel/js/main.js" ></script>
+
     <!-- Template Javascript -->
     <script src="~/UI/js/main.js"></script>
     @RenderSection("Scripts", required: false)
