--- a/ArtGallery/wwwroot/UI/css/style.css
+++ b/ArtGallery/wwwroot/UI/css/style.css
@@ -12,7 +12,27 @@
      visibility: visible;
      opacity: 1;
  }
+.carousel-image {
+    width: 100%;
+    height: 300px;
+    object-fit: cover; /* Đảm bảo hình ảnh lấp đầy kích thước mà không bị méo */
+}
 
+.owl-carousel .item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.owl-carousel .owl-item img {
+    border-radius: 10px;
+    opacity: 0.5;
+    transition: opacity 0.3s ease;
+}
+
+.owl-carousel .owl-item.active.center img {
+    opacity: 1;
+}
  .back-to-top {
     position: fixed;
     right: 30px;
