--- a/ArtGallery/Views/Customer/Index.cshtml
+++ b/ArtGallery/Views/Customer/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h2>List Customer</h2>
 
-<a href="@Url.Action("Create")" class="btn btn-primary mb-4">Create New Exhibition</a>
+<a href="@Url.Action("Create")" class="btn btn-custom-primary mb-4">Create New</a>
 <table class="table">
     <thead>
         <tr>
