--- a/ArtGallery/Views/Exhibition/Admin.cshtml
+++ b/ArtGallery/Views/Exhibition/Admin.cshtml
@@ -8,7 +8,7 @@
 
 <div class="container">
     <h2>Exhibition List</h2>
-    <a href="@Url.Action("Create")" class="btn btn-primary">Create New Exhibition</a>
+    <a href="@Url.Action("Create")" class="btn btn-custom-primary">Create New</a>
     <table class="table table-bordered mt-3">
         <thead>
             <tr>
