--- a/ArtGallery/Views/Artist/Delete.cshtml
+++ b/ArtGallery/Views/Artist/Delete.cshtml
@@ -40,6 +40,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="ArtistId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
