--- a/ArtGallery/Views/Artwork/Edit.cshtml
+++ b/ArtGallery/Views/Artwork/Edit.cshtml
@@ -67,7 +67,7 @@
         <span asp-validation-for="ExhibitionId" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-primary" />
+        <input type="submit" value="Save" class="btn btn-custom-primary" />
     </div>
 </form>
 
