--- a/ArtGallery/Views/Artwork/Index.cshtml
+++ b/ArtGallery/Views/Artwork/Index.cshtml
@@ -33,12 +33,12 @@
                 <div class="row g-4">
                     <form id="searchForm" class="col-lg-3">
                         <div class="row g-4">
-                            <div class="col-lg-12">
+                           @*  <div class="col-lg-12">
                                 <div class="input-group w-100 mx-auto d-flex">
                                     <input type="search" name="title" class="form-control p-3" placeholder="Enter title..." aria-describedby="search-icon-1" value="@Context.Request.Query["title"]">
                                     <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span>
                                 </div>
-                            </div>
+                            </div> *@
                             <div class="col-lg-12">
                                 <div class="mb-3">
                                     <h4>Categories</h4>
