--- a/ArtGallery/Views/Auction/Admin.cshtml
+++ b/ArtGallery/Views/Auction/Admin.cshtml
@@ -8,7 +8,7 @@
 <h2>Auction List</h2>
 
 <p>
-    <a href="@Url.Action("Create")" class="btn btn-primary">Create New</a>
+    <a href="@Url.Action("Create")" class="btn btn-custom-primary">Create New</a>
 </p>
 
 <table class="table table-striped">
