--- a/ArtGallery/Views/Auction/Create.cshtml
+++ b/ArtGallery/Views/Auction/Create.cshtml
@@ -35,6 +35,6 @@
             <input asp-for="StartingPrice" class="form-control" />
             <span asp-validation-for="StartingPrice" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-custom-primary">Create</button>
     </form>
 </div>
