--- a/ArtGallery/Views/Auction/Edit.cshtml
+++ b/ArtGallery/Views/Auction/Edit.cshtml
@@ -25,6 +25,6 @@
             <input asp-for="StartingPrice" class="form-control" />
             <span asp-validation-for="StartingPrice" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-custom-primary">Save</button>
     </form>
 </div>
