--- a/ArtGallery/Views/Customer/Delete.cshtml
+++ b/ArtGallery/Views/Customer/Delete.cshtml
@@ -46,6 +46,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="CustomerId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a href="@Url.Action("Admin")" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
