--- a/ArtGallery/Views/Customer/Edit.cshtml
+++ b/ArtGallery/Views/Customer/Edit.cshtml
@@ -38,7 +38,7 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-custom-primary" />
             </div>
         </form>
     </div>
