--- a/ArtGallery/Views/Exhibition/Edit.cshtml
+++ b/ArtGallery/Views/Exhibition/Edit.cshtml
@@ -39,6 +39,6 @@
             <input asp-for="ImageUrl" class="form-control" />
             <span asp-validation-for="ImageUrl" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-custom-primary">Save</button>
     </form>
 </div>
