--- a/ArtGallery/Views/Artwork/Create.cshtml
+++ b/ArtGallery/Views/Artwork/Create.cshtml
@@ -77,7 +77,7 @@
         <span asp-validation-for="ExhibitionId" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
+        <input type="submit" value="Create" class="btn btn-custom-primary" />
     </div>
 </form>
 
