--- a/ArtGallery/Views/Exhibition/Index.cshtml
+++ b/ArtGallery/Views/Exhibition/Index.cshtml
@@ -32,7 +32,9 @@
                     <div class="carousel-item @(isFirst ? "active" : "")">
                         <img src="@exhibition.ImageUrl" class="d-block w-100" alt="@exhibition.ExhibitionName">
                         <div class="carousel-caption d-none d-md-block">
-                            <a href="@Url.Action("Detail", "Exhibition", new { id = exhibition.ExhibitionId })" class="btn btn-primary w-auto">@exhibition.ExhibitionName</a>
+                            <a href="@Url.Action("Detail", "Exhibition", new { id = exhibition.ExhibitionId })" class="btn btn-primary btn-lg rounded-pill shadow-sm text-white px-4 py-2 d-inline-block">
+                                <i class="bi bi-info-circle"></i> @exhibition.ExhibitionName
+                            </a>
                         </div>
                     </div>
                     isFirst = false;
