--- a/ArtGallery/Views/Artwork/Detail.cshtml
+++ b/ArtGallery/Views/Artwork/Detail.cshtml
@@ -24,7 +24,7 @@
     <dt class="col-sm-2">Description</dt>
     <dd class="col-sm-10">@Model.Description</dd>
     <dt class="col-sm-2">Image</dt>
-    <dd class="col-sm-10"><img src="@Model.ImageURL" alt="@Model.Title" class="img-fluid" /></dd>
+    <dd class="col-sm-10"><img src="@Model.ImageURL" alt="@Model.Title" class="img-fluid carousel-image" /></dd>
     <dt class="col-sm-2">Category</dt>
     <dd class="col-sm-10">@Model.Category</dd>
     <dt class="col-sm-2">Status</dt>
