--- a/ArtGallery/Views/Cart/Index.cshtml
+++ b/ArtGallery/Views/Cart/Index.cshtml
@@ -49,7 +49,9 @@
     </table>
     <div>
         <form asp-controller="Cart" asp-action="Payment">
-            <button type="submit" class="btn btn-success">Purchase</button>
+            <div class="text-end">
+                <button type="submit" class="btn btn-success">Purchase</button>
+            </div>
         </form>
     </div>
 </div>
