--- a/ArtGallery/Views/Account/Register.cshtml
+++ b/ArtGallery/Views/Account/Register.cshtml
@@ -17,7 +17,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Admin Register</title>
+    <title>Register</title>
 
     <!-- Custom fonts for this template-->
     <link href="~/Admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -62,10 +62,12 @@
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input type="text" class="form-control form-control-user"
                                            placeholder="Enter username" asp-for="UserName">
+                                        <span asp-validation-for="UserName" class="text-danger"></span>
                                     </div>
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input type="password" class="form-control form-control-user"
-                                           placeholder="Enter password" asp-for="Password">
+                                           placeholder="Enter password" asp-for="Password" required>
+                                        <span asp-validation-for="Password" class="text-danger"></span>
                                     </div>
                                 </div>
 
@@ -121,7 +123,11 @@
         </div>
 
     </div>
-
+    @section Scripts {
+        @{
+            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        }
+    }
     <script>
         document.querySelectorAll('input[name="Role"]').forEach((elem) => {
             elem.addEventListener("change", function (event) {
