--- a/ArtGallery/Views/Exhibition/Create.cshtml
+++ b/ArtGallery/Views/Exhibition/Create.cshtml
@@ -9,6 +9,7 @@
 <div class="container">
     <h2>Create New Exhibition</h2>
     <form asp-action="Create" method="post">
+        @* <input type="hidden" asp-for="ExhibitionId" /> *@
         <div class="form-group">
             <label asp-for="ExhibitionName" class="control-label"></label>
             <input asp-for="ExhibitionName" class="form-control" />
@@ -39,6 +40,6 @@
             <input asp-for="ImageUrl" class="form-control" />
             <span asp-validation-for="ImageUrl" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-custom-primary">Create</button>
     </form>
 </div>
