correct page title

--- a/ArtGallery/Views/Artwork/Admin.cshtml
+++ b/ArtGallery/Views/Artwork/Admin.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ArtGallery.Models.ArtworkView>
 
 @{
-    ViewData["Title"] = "Artworks";
+    ViewData["Title"] = "Artworks management";
     Layout = "_Layout";
 }
 
