--- a/ArtGallery/Views/Auction/Admin.cshtml
+++ b/ArtGallery/Views/Auction/Admin.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ArtGallery.Models.AuctionView>
 
 @{
-    ViewData["Title"] = "Auctions";
+    ViewData["Title"] = "Auctions management";
     Layout = "_Layout";
 }
 
