--- a/ArtGallery/Views/Customer/Delete.cshtml
+++ b/ArtGallery/Views/Customer/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ArtGallery.Models.CustomerView
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Customer";
 }
 
 <h1>Delete</h1>
