--- a/ArtGallery/Views/Customer/Details.cshtml
+++ b/ArtGallery/Views/Customer/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ArtGallery.Models.CustomerView
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Customer Details";
 }
 
 <h1>Details</h1>
