--- a/ArtGallery/Views/Customer/Index.cshtml
+++ b/ArtGallery/Views/Customer/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ArtGallery.Models.CustomerView>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Customer management";
 }
 
 <h2>List Customer</h2>
