--- a/ArtGallery/Views/Cart/Payment.cshtml
+++ b/ArtGallery/Views/Cart/Payment.cshtml
@@ -2,6 +2,7 @@
 @inject ArtGallery.Services.CartService _cartService
 
 @{
+    ViewData["Title"] = "Payment";
     Layout = "_UserLayout";
     var accountId = User.Claims.FirstOrDefault(c => c.Type == "AccountId")?.Value;
     var cartItemCount = 0;
