--- a/ArtGallery/Views/Customer/Create.cshtml
+++ b/ArtGallery/Views/Customer/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ArtGallery.Models.CustomerCreate
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Customer";
 }
 
 <h1>Create</h1>
