--- a/ArtGallery/Views/Customer/Edit.cshtml
+++ b/ArtGallery/Views/Customer/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ArtGallery.Models.CustomerView
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Customer";
 }
 
 <h1>Edit</h1>
