--- a/ArtGallery/Views/Artist/Index.cshtml
+++ b/ArtGallery/Views/Artist/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ArtGallery.Models.ArtistView>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Artist Management";
 }
 
 <h2>List Artist</h2>
