--- a/ArtGallery/Views/Customer/Index.cshtml
+++ b/ArtGallery/Views/Customer/Index.cshtml
@@ -14,16 +14,16 @@
                 Username
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FullName)
+                Full Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
+                Email
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                Phone Number
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Address)
+                Address
             </th>
             <th>
                 Action
