--- a/ArtGallery/Views/Artist/Index.cshtml
+++ b/ArtGallery/Views/Artist/Index.cshtml
@@ -14,13 +14,13 @@
                 Username
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ArtistName)
+                Artist Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
+                Email
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                Phone Number
             </th>
             <th>
                 Action
